--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
                         <h3 class="active">Hello!</h3>
                         <h1>I'm Naveen pratap singh</h1>
                         <h2>Web Designer & Frontend Developer</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis fugit nihil
-                            dignissimos, dolore labore commodi velit voluptate, culpa asperiores necessitatibus quis!
-                            Corrupti blanditiis exercitationem et, saepe consequuntur sapiente quas assumenda.</p>
+                        <p> Over 2 YEARS OF EXPERIENCE as UI/UX developer
+                            Expertise in Prototyping, wireframing, user flows, mockups
+                            Experience in User research and usability testing
+                            Experience of UI/UX development along with design,
+                            Writing code using CSS, HTML, JavaScript and Bootstrap 
+                            Collaborating with other teams on a regular basis.</p>
                         <div class="actions">
                             <a href="assest/Resume_naveen.pdf" class="primary-btn" download>Download CV</a>
                             <a href="#" class="primary-btn">Contact Me</a>
@@ -135,9 +138,12 @@
                     <div class="content">
                         <h4 class="fill-pink">My Intro</h4>
                         <h2>About Me</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi lectus, al
-                            iquam sed vulputate sit amet, pharetra ut justo. Nulla facilisi. Donec volutpat
-                            iaculis velit in, malesuada quis diam. Vestibulum ante ipsum primis in faucibus</p>
+                        <p> Over 2 YEARS OF EXPERIENCE as UI/UX developer
+                            Expertise in Prototyping, wireframing, user flows, mockups
+                            Experience in User research and usability testing
+                            Experience of UI/UX development along with design,
+                            Writing code using CSS, HTML, JavaScript, Figma and Bootstrap
+                            Collaborating with other teams on a regular basis.</p>
                         <ul class="information">
                             <li class="detail"> <i class="fa-solid fa-user fill-pink"></i> Name &nbsp; &nbsp; :&nbsp;
                                 &nbsp; Naveen Pratap singh</li>
